--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.0",
+    "astro-icon": "^1.1.1",
+    "lucide": "^0.428.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
